# StackSight

./: Cargo.toml  ICON_SETUP.md  LICENSE  README-DevEnv-Manager-Architecture.md  README-DevEnv-Manager-Backend-Architecture.md  README-DevEnv-Manager-Frontend-Architecture.md  README.md  WINDOWS_BUILD.md  WINDOWS_READY.md  WINDOWS_TESTING.md  copilot-instructions.md  run-with-icon.sh  stacksight-devenv.desktop
.cargo/: config.toml
backend/: Cargo.toml  build.rs
backend/src/: lib.rs  main.rs
backend/src/core/: config.rs  error.rs  event_bus.rs  logging.rs  mod.rs  service_manager.rs
backend/src/models/: commands.rs  docker.rs  events.rs  mod.rs  network.rs  remote_desktop.rs  system.rs  virtenv.rs
backend/src/platform/: mod.rs
backend/src/services/: communication.rs  config.rs  docker.rs  filesystem.rs  mod.rs  network.rs  remote_desktop.rs  system.rs  virtenv.rs
backend/src/utils/: command_executor.rs
docker-manual-demo/: docker-compose.yml
docker-manual-demo/backend/: Dockerfile  app.py  package.json  server.js
docker-manual-demo/frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css
frontend/: Cargo.toml  build.rs
frontend/assets/: README.md
frontend/src/: app.rs  main.rs  router.rs
frontend/src/components/: mod.rs
frontend/src/components/common/: data_table.rs  error_boundary.rs  file_browser.rs  form_components.rs  icon_library.rs  loading_spinner.rs  mod.rs  modal_system.rs  notification_toast.rs  search_input.rs  terminal.rs  terminal_panel.rs
frontend/src/components/dashboard/: activity_feed.rs  mod.rs  overview_panel.rs  quick_actions.rs  system_status_widget.rs  welcome_screen.rs
frontend/src/components/docker/: compose_builder.rs  container_detail.rs  container_list.rs  engine_manager.rs  image_detail.rs  image_manager.rs  logs_viewer.rs  manual_build.rs  manual_compose.rs  mod.rs  network_manager.rs  stats_monitor.rs  volume_manager.rs
frontend/src/components/layout/: footer.rs  header.rs  main_layout.rs  mod.rs  sidebar.rs
frontend/src/components/monitoring/: alert_panel.rs  dashboard.rs  historical_data.rs  mod.rs  performance_metrics.rs  process_monitor.rs  resource_charts.rs  resource_graphs.rs  system_stats.rs
frontend/src/components/network/: firewall_rules.rs  interface_list.rs  mod.rs  network_graph.rs  route_table.rs  vlan_manager.rs
frontend/src/components/remote_desktop/: connection_form.rs  connection_groups.rs  connection_list.rs  mod.rs  session_viewer.rs
frontend/src/components/settings/: advanced_settings.rs  general_settings.rs  integration_settings.rs  mod.rs  notification_settings.rs  theme_settings.rs
frontend/src/components/setup/: docker_step.rs  languages_step.rs  mod.rs  paths_step.rs  summary_step.rs  welcome_step.rs  wizard.css  wizard.rs
frontend/src/components/virtenv/: dependency_viewer.rs  environment_detail.rs  environment_list.rs  environment_settings.rs  language_selector.rs  mod.rs  package_manager.rs  project_wizard.rs  template_manager.rs  version_selector.rs  web_package_modal.rs
frontend/src/services/: backend_client.rs  mod.rs
frontend/src/state/: app_state.rs  messages.rs  mod.rs
windows-package/: BUILD-ON-WINDOWS.txt  README.txt  WEBVIEW2-FIX.txt  install-and-run.bat  start-stacksight.bat
