[package]
name = "devenv-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bollard.workspace = true
chrono.workspace = true
clap.workspace = true
dirs = "5.0"
futures.workspace = true
futures-util.workspace = true
shellexpand.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tar = "0.4"
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = ["docker"]
docker = []

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
