[package]
name = "devenv-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-desktop.workspace = true
dioxus-router.workspace = true
dioxus-signals.workspace = true
futures.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
thiserror.workspace = true
