[package]
name = "devenv-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-desktop.workspace = true
dioxus-router.workspace = true
dioxus-signals.workspace = true
futures.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
rfd = "0.14"
directories = "5.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
image = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Response", "Window"] }
serde-wasm-bindgen = "0.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Windows-specific configuration
# Use the Windows subsystem for GUI apps (no console window)
[[bin]]
name = "devenv-frontend"
path = "src/main.rs"
